--- a/ui/index.html
+++ b/ui/index.html
@@ -5,11 +5,11 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="/ui/madi.png" class="img-large"/>
         </div>
         <br>
         <div class="center text-big bold">
-            Hi I'm Gowtham and this is my first webapp.
+            Hi I'm G
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
