[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
+             <title>My First Webapp</title>
+
     </head>
     <body>
         <div class="center">
