--- a/ui/index.html
+++ b/ui/index.html
@@ -6,6 +6,7 @@
 
     </head>
     <body>
+        <h1>My First Webapp</h1>
         <div class="center">
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
