[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -1,1 +1,30 @@
 <!DOCTYPE html>
+<html>
+ <head>
+     <title>Articleone</title>
+ </head>  
+ <body>
+     <div>
+         <a href="/">Homepage</a>
+     </div>
+     <hr/>
+     <h1>Articleone</h1>
+     <div>19 Jan 1999</div>
+     <p>
+       This is the content of the article one.
+       Its just the beginning.
+     </p>
+     <p>
+       This is the content of the article one.
+       Its just the beginning.
+     </p>
+     <p>
+       This is the content of the article one.
+       Its just the beginning.
+     </p>
+     <p>
+       This is the content of the article one.
+       Its just the beginning.
+     </p>
+ </body>
+</html>
