[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,10 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi I'm G
+            Hi I'm Gautham
+        </div>
+        <div>
+            I'v created an article for this page.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
