[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -14,7 +14,7 @@
         <div class="center text-big bold">
             Hi I'm Gautham
         </div>
-        <div style="width:100px" >
+        <div style="marginLeft:100px" >
             I'v created an article for this page.
         </div>
         <script type="text/javascript" src="/ui/main.js">
