--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
 
     </head>
     <body>
-        <a href="messiargentina5.imad.hasura-app.io/articleone">Article One</a>
+        <a href="http://messiargentina5.imad.hasura-app.io/articleone">Article One</a>
         <h1>My First Webapp</h1>
         <div class="center">
             <img src="/ui/madi.png" class="img-medium"/>
