[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -9,6 +9,7 @@
          <a href="/">Homepage</a>
      </div>
      <hr/>
+     <div class="block">
      <h1>Articleone</h1>
      <div>19 Jan 1999</div>
      <p>
@@ -28,5 +29,6 @@
        <br/>
        Its just the beginning.
      </p>
+     </div>
  </body>
 </html>
