[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -3,7 +3,16 @@
  <head>
      <title>Articleone</title>
      <meta name="viewport" content="width=device-width,initial-scale=1"/>
- </head>  
+      <style>
+     .block{
+         color:"black";
+         font-family:sans-serif;
+         background-color="purple";
+         
+     }
+ </style>
+ </head> 
+
  <body>
      <div>
          <a href="/">Homepage</a>
