--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -3,11 +3,11 @@
  <head>
      <title>Articleone</title>
      <meta name="viewport" content="width=device-width,initial-scale=1"/>
-      <style>
+     <style>
      .block{
          color:"black";
          font-family:sans-serif;
-         background-color="purple";
+         background-color:"purple";
          
      }
  </style>
