[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -7,7 +7,7 @@
      .block{
          color:"black";
          font-family:sans-serif;
-         background-color:"purple";
+         background-color:"pink";
          
      }
  </style>
