[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -7,7 +7,7 @@
      .block{
          color=grey;
          font-family:sans-serif;
-         background-color:pink";
+         background-color:pink;
          
      }
  </style>
