--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -5,9 +5,9 @@
      <meta name="viewport" content="width=device-width,initial-scale=1"/>
      <style>
      .block{
-         color="grey";
+         color:grey;
          font-family:sans-serif;
-         background-color:pink;
+         background-color:purple;
          
      }
  </style>
