--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -8,6 +8,7 @@
          color:grey;
          font-family:sans-serif;
          background-color:purple;
+         margin:0 auto;
          
      }
  </style>
