--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -9,7 +9,9 @@
          font-family:sans-serif;
          background-color:purple;
          margin:0 auto;
-         
+         padding-top: 70px;
+         padding-left: 20px;
+         padding-right: 20px;
      }
  </style>
  </head> 
