[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -3,17 +3,7 @@
  <head>
      <title>Articleone</title>
      <meta name="viewport" content="width=device-width,initial-scale=1"/>
-     <style>
-     .block{
-         color:grey;
-         font-family:sans-serif;
-         background-color:purple;
-         margin:0 auto;
-         padding-top: 70px;
-         padding-left: 20px;
-         padding-right: 20px;
-     }
- </style>
+     <link href="/ui/style2.css" rel="stylesheet" />
  </head> 
 
  <body>
