[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <a href="http://messiargentina5.imad.hasura-app.io/articleone">Article One</a>
-        <a href="http://messiargentina5.imad.hasura-app.io/articletwo">Article One</a>
+        <a href="http://messiargentina5.imad.hasura-app.io/articletwo">Article Two</a>
         <h1>My First Webapp</h1>
         <div class="center">
             <img src="/ui/madi.png" class="img-medium"/>
