[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -19,6 +19,9 @@
         <div style="margin:300px" >
             I'v created an article for this page.
         </div>
+        <script>
+            alert('Hi this is Javascript');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
