[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,6 +8,7 @@
     <body>
         <a href="http://messiargentina5.imad.hasura-app.io/articleone">Article One</a>
         <a href="http://messiargentina5.imad.hasura-app.io/articletwo">Article Two</a>
+        <div class="main-text">
         <h1>My First Webapp</h1>
         <div class="center">
             <img src="/ui/madi.png" class="img-medium"/>
@@ -18,6 +19,7 @@
         </div>
         <div style="margin:300px" >
             I'v created an article for this page.
+        </div>
         </div>
         <script>
             alert('Hi this is Javascript');
