--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
         <div class="center">
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
-        <div class="main-text">
+        <div class="main-text" id="main-text" >
         <h1>My First Webapp</h1>
         
         <br>
