[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         <a href="http://messiargentina5.imad.hasura-app.io/articleone">Article One</a>
         <a href="http://messiargentina5.imad.hasura-app.io/articletwo">Article Two</a>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img id="madi" src="/ui/madi.png" class="img-medium"/>
         </div>
         <div class="main-text" id="main-text" >
         <h1>My First Webapp</h1>
