[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
        
         </div>
         <div class="Personal">
-            <h1>Pesonal</h1>
+            <h1>Personal</h1>
             <p>
                 Hi! I'm Gautham.
             </p>
