[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -26,5 +26,6 @@
                  B.E Electronics and Instrumentation
             </p>
         </div>
+        <button id="counter">counter</button> <span id="count">0</span>
     </body>
 </html>
