[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -26,6 +26,9 @@
                  B.E Electronics and Instrumentation
             </p>
         </div>
-        <button id="counter">counter</button> <span id="count">0</span>
+        <button id="counter">counter</button>
+        <span id="count">0</span>
+         <script type="text/javascript" src="/ui/main.js"></script>
     </body>
+   
 </html>
